Fix x-overflow

--- a/static/global.css
+++ b/static/global.css
@@ -21,6 +21,7 @@ html {
 
 body {
   background: var(--bg-color);
+  overflow-x: hidden;
 }
 
 p {
